--- a/main.html
+++ b/main.html
@@ -10,6 +10,33 @@
 
 <body>
     <h1>Juan Alberto Rosales Juarez</h1>
+    <div id="inputs">
+        <div>Tipo de actividad</div>
+        <input type="text" id="tipo">
+        <div>Nombre</div>
+        <input type="text" id="nombre">
+        <div>Costo</div>
+        <input type="text" id="costo">
+        <div>Hora</div>
+
+        <button id="h-plus-button">+</button>
+        <span id="hora" >00</span>
+        <button id="h-minus-button">-</button>
+
+        <button id="m-plus-button">+</button>
+        <span id="minutos">00</span>
+        <button id="m-minus-button">-</button>
+
+        <button id="ingresar">Ingresar</button>
+
+    </div>
+
+    <div id="actividades">
+        <ul id="lista-actividades">
+
+        </ul>
+    </div>
+
 </body>
 
 </html>
