--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Juan Alberto Rosales Juarez</h1>
     <div id="inputs">
-        <div>Tipo de actividad</div>
+        <div>Tipo de evento</div>
         <input type="text" id="tipo">
         <div>Nombre</div>
         <input type="text" id="nombre">
@@ -31,10 +31,8 @@
 
     </div>
 
-    <div id="actividades">
-        <ul id="lista-actividades">
+    <div id="eventos">
 
-        </ul>
     </div>
 
 </body>
