--- a/main.html
+++ b/main.html
@@ -13,7 +13,8 @@
 
 <body>
     <h1>Juan Alberto Rosales Juarez</h1>
-    <div class="comentarios">Primera version del planeador de vacaciones, inicialmente se define el destino y los dias. posteriormente se definen las actividades o eventos de un solo dia. Queda pendiente implementar multiples dias y agregar un html para cargar multiples viajes en local storage</div>
+    <div class="comentarios">Primera version del planeador de vacaciones, inicialmente se define el destino y los dias. posteriormente se definen las actividades o eventos de un solo dia. Todo queda guardado en local storage.
+        Queda pendiente implementar multiples dias y agregar un html para cargar multiples viajes</div>
     <section id="screen-app" class="screen"></section>
 
 </body>
