--- a/pages/app.html
+++ b/pages/app.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--JS-->
-    <script defer src="./js/main.js"></script>
+    <script defer src="../js/main.js"></script>
     <!-- Styles -->
-    <link rel="stylesheet" href=".\styles\styles.css">
+    <link rel="stylesheet" href="..\styles\styles.css">
 
-    <title>Pre-Entrega 2</title>
+    <title>Final</title>
 </head>
 
 <body>
+    <header>
+        <div>
+            <a href="..\index.html"></a>
+        </div>
+    </header>
+
     <h1>Juan Alberto Rosales Juarez</h1>
     <div class="comentarios">Primera version del planeador de vacaciones, inicialmente se define el destino y los dias. posteriormente se definen las actividades o eventos de un solo dia. Todo queda guardado en local storage.
         Queda pendiente implementar multiples dias y agregar un html para cargar multiples viajes</div>
@@ -21,5 +27,3 @@
     </section>
 
 </body>
-
-</html>
