Todos los botones funcionan y bugfix

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 
 
     <h1>Juan Alberto Rosales Juarez</h1>
-    <section id="pantalla-principal" class="screen">
-
-    </section>
+    <div>App para organizar viajes, se guardan todos los viajes en local storage</div>
 
     <section id="screen-app" class="screen"></section>
 
