error handling y separacion funciones

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!--JS-->
+    <script defer src="./js/definitions.js"></script>
+    <script defer src="./js/viajesFunctions.js"></script>
+    <script defer src="./js/eventosFunctions.js"></script>
     <script defer src="./js/main.js"></script>
+
     <!-- Styles -->
     <link rel="stylesheet" href=".\styles\styles.css">
 
@@ -18,7 +22,8 @@
     <div>App para organizar viajes, se guardan todos los viajes en local storage</div>
 
     <section id="screen-app" class="screen"></section>
-
+    <!-- Sweet Alert -->
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 
 </html>
